cmake_minimum_required(VERSION 2.8)
include_directories(${CMAKE_SOURCE_DIR})
find_program(ANT "ant")
if (NOT DEFINED ANT)
    message(FATAL_ERROR "ant not found")
endif()
find_program(DPKG "dpkg")
if (NOT DEFINED DPKG)
    message(FATAL_ERROR "dpkg not found")
endif()
EXECUTE_PROCESS(COMMAND "date" "+%Y%m%d.%H%M%S" OUTPUT_VARIABLE   RESULT)
string(REPLACE "\n" "" CURRENT_DATE ${RESULT})
set(CPACK_GENERATOR                     "DEB")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE   "amd64")
set(CPACK_CMAKE_GENERATOR               "Unix Makefiles")
set(CPACK_PACKAGE_NAME                  "adfox-zookeeper")
set(CPACK_DEBIAN_PACKAGE_HOMEPAGE       "http://git.adfox.ru/adfox/zookeeper")
set(CPACK_PACKAGE_DESCRIPTION           "zookeeper service: ${COMMIT_HASH}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY   "zookeeper service")
set(CPACK_PACKAGE_VENDOR                "Adfox at Yandex")
set(CPACK_PACKAGE_CONTACT               "support@adfox.ru")
set(CPACK_PACKAGE_VERSION_MAJOR         "3")
set(CPACK_PACKAGE_VERSION_MINOR         "6")
set(CPACK_PACKAGE_VERSION_PATCH         "0.${CURRENT_DATE}")
set(PACKAGE_VERSION                     "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_PACKAGE_FILE_NAME             "adfox-zookeeper-${PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
# see https://www.debian.org/doc/debian-policy/ch-relationships.html#s7.6.2
SET(CPACK_DEBIAN_PACKAGE_PROVIDES       "zookeeper")
SET(CPACK_DEBIAN_PACKAGE_CONFLICTS      "zookeeper")
SET(CPACK_DEBIAN_PACKAGE_REPLACES       "zookeeper")
set(CPACK_DEBIAN_PACKAGE_DEPENDS        "")
set(CPACK_OUTPUT_FILE_PREFIX            "${CMAKE_CURRENT_BINARY_DIR}/packages")
#set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA  "${CMAKE_SOURCE_DIR}/debian/postinst")
#install(CODE "
#    find_filea(PACKAGE_FILE \"*.deb\" \"${CMAKE_CURRENT_BINARY_DIR}\")
#    execute_process(COMMAND ${DPKG} -x \"${PACKAGE_FILE}\" \"${CMAKE_CURRENT_BINARY_DIR}/dist/\" RESULT_VARIABLE retcode)
#    if(NOT \"\${retcode}\" STREQUAL \"0\")
#        message(FATAL_ERROR \"Fatal error while repack deb package\")
#    endif()
#    ")
install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/dist/" DESTINATION / USE_SOURCE_PERMISSIONS)
Include(CPack)
